exercises/dbapp/dbapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-dep
  labels:
    day: day4
    sample: dbapp
spec:
  replicas: 1
  selector:
    matchLabels:
      day: day4
      sample: dbapp
      layer: backend
  template:
    metadata:
      labels:
        day: day4
        sample: dbapp
        layer: backend
    spec:
      volumes:
        - name: dbvol
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: database
          image: mysql:8
          volumeMounts:
            - name: dbvol
              mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    day: day4
    sample: dbapp
spec:
  type: ClusterIP
  selector:
    day: day4
    sample: dbapp
    layer: backend
  ports:
    - name: mysql
      port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-dep
  labels:
    day: day4
    sample: dbapp
spec:
  replicas: 1
  selector:
    matchLabels:
      day: day4
      sample: dbapp
      layer: frontend
  template:
    metadata:
      labels:
        day: day4
        sample: dbapp
        layer: frontend
    spec:
      containers:
        - name: webserver
          image: adminer:4-standalone
---
apiVersion: v1
kind: Service
metadata:
  name: fe-svc
  labels:
    day: day4
    sample: dbapp
spec:
  type: NodePort
  selector:
    day: day4
    sample: dbapp
    layer: frontend
  ports:
    - name: adminer
      port: 8080
      nodePort: 31000
