exercises/dbapp/db-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-np
  namespace: project1
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      day: day4
      sample: dbapp
      layer: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              day: day4
              sample: dbapp
              layer: frontend
